Fix spark/core spark40 integration test: JDK 17 runtime and add-opens
Signed-off-by: Sotaro Hikita <bering1814@gmail.com>